--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   trino-coordinator:
-    image: 'trinodb/trino:latest'
+    image: 'trinodb/trino:388'
     hostname: trino-coordinator
     ports:
       - '8080:8080'
